// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with elements 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  list-style-position: inside;
  list-style-type: decimal;
}

<ol
  class="c0 c1"
  type="ol"
>
  <li
    class=""
  >
    <p>
      hello
    </p>
  </li>
  <li
    class=""
  >
    <p>
      world
    </p>
  </li>
</ol>
`;

exports[`it works with ordered 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  list-style-position: inside;
  list-style-type: decimal;
}

<ol
  class="c0 c1"
  type="ol"
>
  <li
    class=""
  >
    hello
  </li>
  <li
    class=""
  >
    world
  </li>
</ol>
`;

exports[`it works with strings 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  list-style-position: inside;
  list-style-type: decimal;
}

<ol
  class="c0 c1"
  type="ol"
>
  <li
    class=""
  >
    hello
  </li>
  <li
    class=""
  >
    world
  </li>
</ol>
`;

exports[`it works with unordered 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  list-style-position: inside;
  list-style-type: disc;
}

<ul
  class="c0 c1"
  type="ul"
>
  <li
    class=""
  >
    hello
  </li>
  <li
    class=""
  >
    world
  </li>
</ul>
`;
